@@ -1,3 +1,9 @@
+2013-01-06  Zoltan Tuza <zoltuz@zoltuz-laptop>
+
+	* txtl_plot: making adjustment to the GUI
+	* txtl_plot_gui: first version of the GUI: visibility of the species
+	on the species plot can be turned on/off
+
 2013-01-04  Zoltan Tuza <zoltuz@zoltuz-laptop>
 
 	* txtl_reaction_config: matlab class for configuration handling. The
